Bug 418727, Save as text only includes the email subject, r+sr=peterv, a=beltzner